# waters-core-v2

./: .gitignore  Cargo.toml  Dockerfile.mcp  SOCIAL_CONTRACT.md  architect_system.ptxt  constructor_journal_droplet_177_nodes_1_2.md  distribute_page.rs  lawkeeper.ptxt  meaning_director.ptxt  network_engineer.ptxt  opencode-arch.json  opencode-build.json  opencode-meaning.json  opencode-safe.json  opencode.json  personal.rs  requirements.txt  run_all.sh  run_arch.sh  run_architect_7b.sh  run_constructor.sh  run_distributed.sh  run_integrator.sh  run_model.sh  run_safe.sh  run_terminals.sh  sale.rs  team_operations.rs  team_recalculate_batch.rs  test_results_node1_node2.md
agents/: agent_architect_for_kapelka.py  auditor_TOR.md  constructor_AGENTS.md  constructor_v1.0.md  domains_known.py  integrator_data_manager.py  lawkeeper_v1.0.md  lunar_geologist_v0.1.json  scout_cleanup.py  scout_ratelimit.py  scout_state.py
archive/: deep_model_analysis.md
community/: CONTRIBUTING.md
doctrine/: mission_control_architecture.md  nature_inspired_tech.md  nervous_system.md  scale_plan.md  virtual_life_modes.md
documents/: constructor_output.json  dmz_architecture.md  integrator_recommendations.md  network_organization_by_laws.md  opencode_24_7_setup.md  opencode_native_migration.md  opencode_tools_setup.md
infrastructure/: cloud_comparison.md
integrations/: dmz_products_and_systems.md
ontology/: lunar_mission.jsonld
schemas/: data_ready.schema.json  (+10 more)
waters-core/waters-agent/: Cargo.toml  config.toml
waters-core/waters-agent/src/: config.rs  llm.rs  mcp.rs  subagent.rs
(+284 files in other folders)
